[metadata]
name = arcticc
version = 0.0.1
description = AHL Tick storage native extensions
author = Man AHL Technology
author_email = ManAHLTech@ahl.com
keywords =

classifiers =
    # Remove this if your project is a top-level (ie, standalone) package
    # or if is the root of a platform release.
    Topic :: Software Development :: Libraries

setup_requires =
    # Setup dependencies, usually empty.
    grpcio-tools
    sphinx
    wheel
    cmake

install_requires =
    # Runtime dependencies
    numpy
    pandas
    attrs
    dataclasses ; python_version < '3.7'
    enum-compat
    grpcio-tools
    xxhash
    six
    msgpack
    psutil
    pyyaml
    pymongo
    decorator
    prometheus_client

tests_require =
    # Testing dependencies
    pytest
    pytest-cpp
    pytest-timeout
    flask
    future
    pytest-server-fixtures
    six
    mock
    boto3
    arctic
    kafka-python
    kazoo
    hypothesis
    moto
    flask_cors

[tool:pytest]
cpp_files=tests/cpp/*
norecursedirs=third_party tmp* nogit
